Deply using gh-pages

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://pratims10.github.io/Searching-Sorting-Visualizer",
+  "homepage": "https://pratims10.github.io/Graph-alogrithm-visualizer",
   "name": "graph-algorithm-visualizer",
   "version": "0.1.0",
   "private": true,
